# heliostat_tracking

./: .gitignore  ArmatureJoint.cpp  CMakeLists.txt  ElevationAngleKM.cpp  HourAngleKM.cpp  Interval.cpp  IntervalPeriodic.cpp  MathematicaWrapper.cpp  Matrix4x4.cpp  PythonWrapper.cpp  README.md  TrackedTarget.cpp  TrackerArmature2A.cpp  TrackerSolver.cpp  TrackerSolver2A.cpp  TrackerTarget.cpp  Transform.cpp  atmosphere.cpp  auxfunction.cpp  build.sh  environment.cpp  gcf.cpp  gfc.cpp  heliostat.cpp  heliostatallfactors.cpp  heliostatcosine.cpp  heliostatcosinetransmittance.cpp  idealefficiencymap.cpp  install.sh  location.cpp  main.cpp  processheliostatfunctor.cpp  scenario.cpp  vec2d.cpp  vec3d.cpp  version  wrapper_test.py
.devcontainer/: README.md  devcontainer.json
.devcontainer/assets/: devcontainer.env  post_install.sh
.devcontainer/scripts/: 0010-docker-dev_container_exec_bash.sh
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/azimuth_elevation/: main1.cpp
examples/bluesolar_angles/: BluesolarAngles.cpp  BluesolarHelpers.cpp  BluesolarHelpers.h  main2.cpp  sunpos.cpp  sunpos.h
examples/bluesolar_angles_python/: BluesolarHelpers.py  main2.py
examples/bluesolar_points/: BlueSolarPointsHelpers.cpp  BluesolarPointsHelpers.cpp  BluesolarPointsHelpers.h  BluesolarPointsHelpersA.cpp  main.cpp  main3.cpp
examples/heliostat_studio/: main3.cpp
include/: ArmatureJoint.h  ElevationAngleKM.h  HourAngleKM.h  Interval.h  IntervalPeriodic.h  Matrix4x4.h  Ray.h  TrackerArmature2A.h  TrackerSolver2A.h  TrackerTarget.h  Transform.h  atmosphere.h  atmosphereLH.h  atmosphereSW.h  atmosphereVB.h  auxfunction.h  boundaries.h  environment.h  gcf.h  heliostat.h  heliostatallfactors.h  heliostatcosine.h  heliostatcosinetransmittance.h  idealefficiencymap.h  location.h  mathconstants.h  processheliostatfunctor.h  receiver.h  scenario.h  vec2d.h  vec3d.h
test/: ArmatureJointTests.cpp  CMakeLists (SunVanguard01's conflicted copy 2024-06-16).txt  CMakeLists.txt  ElevationAngleKMTests (SunVanguard01's conflicted copy 2024-06-16).cpp  ElevationAngleKMTests.cpp  HourAngleKMTests (SunVanguard01's conflicted copy 2024-06-16).cpp  HourAngleKMTests.cpp  IntervalPeriodicTests.cpp  IntervalTests.cpp  Matrix4x4Tests.cpp  PythonWrapperTests.cpp  TrackerArmature2ATests.cpp  TrackerSolver2ATests.cpp  TrackerTargetTests.cpp  TransformTests.cpp  gcfTests.cpp  heliostat-test.cpp  testhypl.cpp  vec2dTests.cpp  vec3dTests.cpp
test/mathematica/: tests01.nb
tmuxinator/: heliostat_tracking.yml
